Huellas/force-app/main/default/objects/historial_de_vacunacion__c/historial_de_vacunacion__c.object-meta.xml
<CustomObject>
    <description>Registra y rastrea las vacunaciones realizadas a las mascotas.</description>
    <label>Historial de vacunación</label>
    <nameField>
        <displayFormat>HVM-{000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historial de vacunaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>