Huellas/force-app/main/default/objects/historial_de_vacunacion__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <description>Campo de fecha que representa la fecha de vacunación.</description>
    <inlineHelpText>Selecciona la fecha de vacunación.</inlineHelpText>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>