Huellas/force-app/main/default/objects/historial_de_vacunacion__c/fields/Lugar__c.field-meta.xml
<CustomField>
    <fullName>Lugar__c</fullName>
    <description>Campo de texto abierto que representa el lugar de vacunación.</description>
    <inlineHelpText>Escribe el lugar de vacunación.</inlineHelpText>
    <label>Lugar</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>