Huellas/force-app/main/default/objects/historial_de_vacunacion__c/fields/Mascota__c.field-meta.xml
<CustomField>
    <fullName>Mascota__c</fullName>
    <description>Campo de relación con el objeto Mascota.</description>
    <inlineHelpText>Relaciona el campo historial de vacunación con el campo mascota.</inlineHelpText>
    <label>Mascota</label>
    <referenceTo>Mascota__c</referenceTo>
    <relationshipLabel>Historial de vacunaciones</relationshipLabel>
    <relationshipName>Historial_de_vacunaciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>