Huellas/force-app/main/default/objects/historial_de_vacunacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mascota__c</columns>
    <columns>Lugar__c</columns>
    <columns>Fecha__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>